# Competitions

./: .gitignore  CMakeLists.txt  README.md  a.out  input.txt  run.sh  som  task_1379  task_353_json  task_543  task_6471  task_A  test  test.cpp
Codeforces/round_129/: task_B.scala
Codeforces/round_792/: Z_mod_X.scala
Codeforces/round_793/: task_A.py  task_A.scala  task_A_v2.scala  task_A_v3.scala
Codeforces/round_794/: task_A.scala
Codeforces/round_795/: task_B.py
Leetcode/: Longest_Common_Prefix.scala  Palindrome_Number.scala  README.md  Rearrange Characters to Make Target String.py  Roman_to_Integer.scala  Two_Sum.scala
SQL/: run.sh
SQL/Leetcode/: 1050.sql  1084.sql  1112.sql  1141.sql  1148.sql  1158.sql  1164.sql  1173.sql  1179.sql  1193.sql  1211.sql  1251.sql  1264.sql  1280.sql  1294.sql  1303.sql  1321.sql  1341.sql  1393.sql  1407.sql  1440.sql  1445.sql  1459.sql  1484.sql  1501.sql  1527.sql  1549.sql  1571.sql  1581.sql  1587.sql  1607.sql  1633.sql  1667.sql  1693.sql  1699.sql  1729.sql  1731.sql  1741.sql  1747.sql  175.sql  (+34 more)
SQL/mag/: q.sql
SQL/mag/02/: 2. Ротация данных.sql
SQL/mag/903/: 3. Данные.csv  3. Таблица.sql  3.Данные scsdata.jdata.json  3.Представление.sql  err.txt
coding/: day256.cpp  for_VK.py  hh.py  list_tasks.md  task.md  task_BB.py  task_BB_v1.py  template.py  time_test.py
coding/CodeRun/: links.md
coding/CodeRun/back/: db.json  task_155.cpp  task_189.cpp  task_198.cpp  task_204.cpp  task_222.cpp  task_222_v1.cpp  task_222_v2.cpp  task_222_v3.cpp  task_222_v4.cpp  task_227.cpp  task_251.cpp  task_257.cpp  task_257.py  task_324.cpp  task_344.cpp  task_349.cpp  task_352.cpp  task_353_curl.cpp  task_353_json.cpp  task_357.cpp  task_360.cpp  task_361.cpp  task_377.cpp  task_381.cpp
coding/Codeforces/: input.txt  task_A_z_func.py
coding/Codeforces/TypeDB_Forces_2023/: task_A.cpp  task_B.cpp  task_B_v1.cpp  task_C.cpp
coding/Codeforces/VK_cup_22/: CMakeLists.txt  in.txt  task_A.cpp  task_B.cpp  task_B2.cpp  task_B2_v1.cpp  task_B2_v2.cpp  task_B2_v3.cpp  task_B_v1.cpp  task_C.cpp  task_C.py  task_C_v1.cpp  task_C_v2.cpp
coding/Codeforces/ed_round_131/: task_A.py  task_C.py
coding/Codeforces/ed_round_132/: task_A.py  task_B.py  task_B_v1.py  task_C.py  task_C_v1.py  task_D.py
coding/Codeforces/ed_round_139/: task_A.cpp  task_B.cpp  task_B_v1.cpp
coding/Codeforces/ed_round_140/: task_A.cpp
coding/Codeforces/ed_round_142/: task_A.cpp  task_B.cpp
coding/Codeforces/ed_round_144/: task_A.cpp  task_B.cpp
coding/Codeforces/ed_round_167/: task_A.cpp
coding/Codeforces/icpc_02_03_2024/: task_A.txt  task_С.cpp
coding/Leetcode/: 6108. Decode the Message.py  6156.py  6177.py  6178.py  958.py  958_v1.py  Apply Discount to Prices.py  Dot_Product_1570.java  Steps to Make Array Non-decreasing.py  Valid_Parentheses.scala  in.txt  input.txt  task_1119.cpp  task_1920.cpp  task_20.cpp  task_20_with_stack.cpp  task_21.cpp  task_21.py
coding/codenrock/: 1  1.cpp  1.py  2  2.cpp  3  3.cpp  3_v1  3_v1.cpp  4  4.cpp  4_v1  4_v1.cpp  5  5.cpp  5_v1  5_v1.cpp  5_v2  5_v2.cpp
coding/train_yandex/: data.txt  ex.py  for_gen.py
coding/vk_2024/: task_01.py
coding/ya_back_24/: task_A.cpp
train_yandex/2021/: equation.py  telephone_number.py
(+1049 files in other folders)
