
cmake_minimum_required(VERSION 3.25)
project(Competitions)

set(CMAKE_CXX_STANDARD 17)

#add_executable(Competitions coding/Leetcode/DS_A/task_1283.cpp)
#add_executable(Competitions coding/Leetcode/Tasks/task_1474.cpp) linked list
add_executable(Competitions coding/Leetcode/Tasks/task_703.cpp)
#add_executable(Competitions coding/Leetcode/BitManip/task_762.cpp)
#add_executable(Competitions coding/Leetcode/prefix_sum/task_2574.cpp)
#add_executable(Competitions coding/Leetcode/Biweekly_Contest_135/task_100365.cpp)
#add_executable(Competitions coding/Leetcode/Weekly_Contest_407/task_100360.cpp)
#add_executable(Competitions coding/Codeforces/round_955/ta/sk_A.cpp)
#add_executable(Competitions coding/Codeforces/ed_round_167/task_A.cpp)

#add_executable(Competitions coding/CodeRun/back/task_257.cpp)
